refactor: 3단계 - 기능 우선 패키지 구성하기
- 패키지 변경
- 컨텍스트 분리
- 주문 컨텍스트는 3개로 분리